add intellij integration test structure (#76)
* add intellij integration test structure

* configure testdata and assert files

* try to execute slurp action

* set lsp server path

* interacting with editor - wip

* executa slurp e valida arquivo

* fix dispatch-all-until

* remove unnecessary lines

* refactoring tests - wip

* adding --debug to test.yaml

* bump LSP4IJ version

* bump LSP4IJ version

* improve tests

* refactor some functions

* disable comment from test report

* remove debug flag from test

* apply code review

* change test project name to be more explicit

---------

Co-authored-by: Marlon Silva <marlon.silva@nubank.com.br>
Co-authored-by: Marlon Silva <contato@marlonjsilva.com.br>